whishper-priv/whishper-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whisper-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: prod-cluster-issuer
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: whisper-basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required '
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    # nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:3000/"
    # nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    # If you encounter a redirect loop or are getting a 307 response code
    # then you need to force the nginx ingress to connect to the backend using HTTPS.
    #
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
  # namespace: ente-photos
spec:
  ingressClassName: nginx
  rules:
  - host: whisper.hensen.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whishper
            port:
              number: 8082
  - host: whishper.hensen.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whishper
            port:
              number: 8082
            
  # TLS configuration for HTTPS
  tls:
    # TLS secretName used on ClusterIssuer
    - secretName:  letsencrypt-prod
      hosts:
        - whisper.hensen.io
        - whishper.hensen.io
